# translation_google_bing-master

./: .pypirc  LICENSE  README.md  setup.cfg  setup.py
google_bing_trans/bingtrans/: __init__.py  bing_translator.py
trans_google_bing.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
