[metadata]
# replace with your username:
name = example-pkg-YOUR-USERNAME-HERE
version = 0.0.1
author = Jerry gu
author_email = victor_jie@yeah.net
description = A free translation API for Google and bing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JadenyCool/translation_google_bing
project_urls =
    Bug Tracker = https://github.com/JadenyCool/translation_google_bing/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6